--- a/bin/src/main/java/view/CadastroUsuario.fxml
+++ b/bin/src/main/java/view/CadastroUsuario.fxml
@@ -32,63 +32,67 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="609.0" prefWidth="944.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LancamentoHoraController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="924.0" style="-fx-background-color: ffffff;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroUsuarioController">
   <children>
-    <SplitPane centerShape="false" dividerPositions="0.14861995753715498" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" styleClass="window" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="686.0" prefWidth="402.0" style="-fx-background-color: #1f25c1;" styleClass="sidebar" SplitPane.resizableWithParent="false">
-               <children>
-                  <Text fill="#f5ebeb" layoutX="89.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bem-vindos a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="299.0">
-                     <font>
-                        <Font size="36.0" />
-                     </font>
-                  </Text>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="47.0" pickOnBounds="true" preserveRatio="true" />
-                  <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="10.0" layoutY="10.0">
-                     <image>
-                        <Image url="@../../../../../../../Pictures/Screenshots/Captura%20de%20tela%202023-04-07%20103549.png" />
-                     </image>
-                  </ImageView>
-               </children></AnchorPane>
-        <ScrollPane prefHeight="701.0" prefWidth="567.0" style="-fx-background-color: ffffff;" SplitPane.resizableWithParent="false">
-          <content>
-            <AnchorPane id="Content" prefHeight="619.0" prefWidth="712.0" style="-fx-background-color: ffffff;" styleClass="content">
-              <children>
-                        <Button fx:id="btn_lancar" layoutX="194.0" layoutY="592.0" mnemonicParsing="false" onAction="#lancarHoras" prefHeight="41.0" prefWidth="214.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
+<AnchorPane id="Content" minHeight="566.0" prefHeight="595.0" prefWidth="1026.0" style="-fx-background-color: ffffff;" styleClass="content" stylesheets="@stylesCadastroUsuario.css">
+  <children>
+            <Button fx:id="btn_cadastrar" layoutX="530.0" layoutY="478.0" mnemonicParsing="false" onAction="#cadastrarUsuario" prefHeight="45.0" prefWidth="208.0" style="-fx-background-color: #1f25c1; -fx-background-radius: 50px;" styleClass="myButton" text="Cadastrar" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+            <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
+            <TextField layoutX="391.0" layoutY="253.0" prefHeight="45.0" prefWidth="485.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="391.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="674.0" layoutY="355.0" prefHeight="45.0" prefWidth="192.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+            <TextField layoutX="398.0" layoutY="148.0" opacity="0.85" prefHeight="45.0" prefWidth="485.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
+           
+            <BorderPane prefHeight="656.0" prefWidth="356.0">
+               <left>
+                  <AnchorPane prefHeight="651.0" prefWidth="349.0" style="-fx-background-color: #1f25c1;" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button layoutX="144.0" layoutY="462.0" minWidth="53.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="53.0" styleClass="myButton"  stylesheets="@stylesCadastroUsuario.css" style="-fx-background-color: #1f25c1;" text="" textAlignment="CENTER">
+                           <graphic>
+                              <ImageView fitHeight="58.0" fitWidth="68.0">
+                                 <image>
+                                    <Image url="@assets/botao.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Text fill="WHITE" layoutX="33.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Bem vindo a tela de cadastro de usuario" textAlignment="CENTER" wrappingWidth="276.0">
                            <font>
-                              <Font size="14.0" />
-                           </font></Button>
-                        <Label layoutX="160.0" layoutY="132.0" styleClass="title" text="Informe seus dadods de cadastro" textFill="#1f25c1">
-                           <font>
-                              <Font name="Calibri Bold" size="24.0" />
+                              <Font size="30.0" />
                            </font>
-                        </Label>
-                        <HBox alignment="CENTER" layoutX="152.0" layoutY="216.0" />
-                        <TextField layoutX="152.0" layoutY="303.0" prefHeight="45.0" prefWidth="345.0" promptText="  E-mail" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-                        <TextField layoutX="152.0" layoutY="398.0" prefHeight="46.0" prefWidth="149.0" promptText="  CPF" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-                        <TextField accessibleRole="PASSWORD_FIELD" layoutX="152.0" layoutY="484.0" prefHeight="45.0" prefWidth="149.0" promptText="  Senha" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-                        <TextField layoutX="348.0" layoutY="399.0" prefHeight="45.0" prefWidth="149.0" promptText="  Tel" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-                        <TextField layoutX="160.0" layoutY="216.0" opacity="0.85" prefHeight="45.0" prefWidth="345.0" promptText="  Nome" style="-fx-background-radius: 15px; -fx-background-color: f5f0f0;" />
-              </children>
-            </AnchorPane>
-          </content>
-        </ScrollPane>
-      </items>
-    </SplitPane>
-      <Accordion />
+                        </Text>
+                        <BorderPane layoutX="49.0" layoutY="75.0" />
+                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="79.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="99.0" fitWidth="200.0" layoutX="79.0" layoutY="40.0">
+                           <image>
+                              <Image url="@assets/logo.png" />
+                           </image>
+                        </ImageView>
+                     </children>
+                  </AnchorPane>
+               </left>
+            </BorderPane>
+            <Text fill="#2247ff" layoutX="456.0" layoutY="79.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Informe seus dados de cadastros" textAlignment="CENTER">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+  </children>
+</AnchorPane>
   </children>
 </VBox>
