--- a/src/main/java/view/Menu/Menu.fxml
+++ b/src/main/java/view/Menu/Menu.fxml
@@ -65,7 +65,7 @@
                </children></AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0" SplitPane.resizableWithParent="false">
           <content>
-            <AnchorPane id="Content" styleClass="content">
+            <AnchorPane id="Content" prefHeight="544.0" prefWidth="921.0" styleClass="content">
               <children>
                         <Label fx:id="homeText" layoutX="233.0" layoutY="35.0" styleClass="title" text="SEJA BEM VINDO USUARIO !!!" textFill="#1f25c1" AnchorPane.leftAnchor="233.0" AnchorPane.rightAnchor="384.0" AnchorPane.topAnchor="35.0">
                            <font>
@@ -131,7 +131,29 @@
                               <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
                            </effect>
                         </Group>
-              </children>
+                        <Group layoutX="41.0" layoutY="391.0" onMouseClicked="#irCadastroUsuario">
+                           <children>
+                       
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
+                              <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../assets/Grafico.png" />
+                                 </image>
+                              </ImageView>
+                              <Label layoutX="17.0" layoutY="80.0" text="Cadastro de Usuario" textFill="#1f25c1">
+                                 <font>
+                                    <Font name="Verdana Bold" size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                           
+                           <effect>
+                              <ColorAdjust contrast="1.0" hue="0.02" saturation="1.0" />
+                           </effect>
+                        </Group>
+                        
+                     </children>
+                     
             </AnchorPane>
           </content>
         </ScrollPane>
