--- a/src/main/java/view/Relatorio/Relatorio.fxml
+++ b/src/main/java/view/Relatorio/Relatorio.fxml
@@ -34,6 +34,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -68,13 +69,15 @@
                               <Font size="27.0" />
                            </font>
                         </Label>
-                        <ComboBox fx:id="comboCR1" layoutX="251.0" layoutY="94.0" prefHeight="35.0" prefWidth="114.0" promptText="Usuário" styleClass="input-text" />
+                        <ComboBox fx:id="tuUsuario" layoutX="635.0" layoutY="94.0" prefHeight="35.0" prefWidth="114.0" promptText="Usuário" styleClass="input-text" />
                         <Button layoutX="348.0" layoutY="354.0" maxWidth="170.0" minHeight="30.0" minWidth="135.0" mnemonicParsing="false" onAction="#GerarRelatorio" prefHeight="35.0" prefWidth="147.0" styleClass="btn-no-restriction" text="Gerar Relatório">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Button>
-                        <DatePicker fx:id="dataTime" layoutX="434.0" layoutY="99.0" />
+                        <DatePicker fx:id="dataInicio" layoutX="55.0" layoutY="99.0" promptText="Data Inicio " />
+                        <DatePicker fx:id="dataFim" layoutX="246.0" layoutY="99.0" promptText="Data Fim " />
+                        <TextField fx:id="tpProjeto" layoutX="454.0" layoutY="99.0" promptText="Projeto" />
               </children>
             </AnchorPane>
           </content>
