--- a/src/main/java/view/Menu/MenuUsuario.fxml
+++ b/src/main/java/view/Menu/MenuUsuario.fxml
@@ -91,7 +91,7 @@
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <Group layoutX="430.0" layoutY="203.0" onMouseClicked="#irDashboardColaborador">
+                        <Group layoutX="430.0" layoutY="203.0" onMouseClicked="#irDashboard">
                            <children>
                               <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#2128bf1f" height="112.0" layoutY="-7.0" stroke="BLACK" strokeType="INSIDE" style="-fx-border-radious: 10px;" width="192.0" />
                               <ImageView fitHeight="54.0" fitWidth="65.0" layoutX="64.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
